--- a/.devcontainer/.dockerignore
+++ b/.devcontainer/.dockerignore
@@ -1,21 +1,34 @@
+# Ignore VCS and editor cruft
 **/.git
 **/.vscode
 **/.idea
+.DS_Store
+Thumbs.db
+
+# Bytecode and caches
 **/__pycache__
 **/*.pyc
 **/*.pyo
 **/*.pyd
 **/*.swp
+
+# Virtualenvs
 **/venv
 **/env
+
+# Workspace env files
 .env
 *.code-workspace
-data/
-notebooks/**/*.ipynb_checkpoints
-*.log
-.DS_Store
-Thumbs.db
 
-# --- NEW: keep build context tiny & readable ---
-mlruns/          # MLflow runs & artifacts (often huge, root-owned)
-mlruns/**        # ensure nested paths are ignored
+# Large or generated data
+data/
+
+# Jupyter checkpoints
+notebooks/**/*.ipynb_checkpoints
+
+# Logs
+*.log
+
+# MLflow runs & artifacts (often huge, sometimes root-owned)
+mlruns
+
