--- a/.devcontainer/pyproject.toml
+++ b/.devcontainer/pyproject.toml
@@ -2,13 +2,11 @@
 name = "docker_dev_template"
 version = "0.1.0"
 description = "Pytorch and Jax GPU docker container"
-authors = [
-  { name = "Geoffrey Hadfield" },
-]
+authors = [{ name = "Geoffrey Hadfield" }]
 license = "MIT"
 readme = "README.md"
 
-# ─── Restrict to Python 3.10–3.12 ──────────────────────────────
+# Python versions (host + container)
 requires-python = ">=3.10,<3.13"
 
 dependencies = [
@@ -33,11 +31,11 @@ dependencies = [
   "shapiq>=0.1.0",
   "explainerdashboard==0.5.1",
   "ipywidgets>=8.0.0",
-  "nutpie>=0.7.1",   # new: nutpie backend for PyMC
+  "nutpie>=0.7.1",
   "numpyro>=0.18.0,<1.0.0",
-  "pytensor>=2.18.3",  # explicit version for CUDA support
-  "aesara>=2.9.4",     # alternative backend option
-  "tqdm>=4.67.0",
+  "pytensor>=2.18.3",
+  "aesara>=2.9.4",
+  "tqdm>=4.66.5",
   "pyarrow>=12.0.0",
   "optuna>=3.0.0",
   "optuna-integration[mlflow]>=0.2.0",
@@ -47,9 +45,12 @@ dependencies = [
   "uvicorn[standard]>=0.24.0",
   "pydantic>=2.0.0",
   "pydantic-settings",
+  "kagglehub[pandas-datasets]>=0.3.12,<0.4.0",
+  "duckdb~=1.3.2",           # latest stable Python client as of Aug 22, 2025
 ]
 
 [project.optional-dependencies]
+# Developer tooling, safe everywhere
 dev = [
   "pytest>=7.0.0",
   "black>=23.0.0",
@@ -59,13 +60,43 @@ dev = [
   "invoke>=2.2",
 ]
 
+# Optional: CUDA-12.x tools like CuPy are Linux-only; leave off by default
 cuda = [
-  "cupy-cuda12x>=12.0.0",  # For CUDA 12.x
+  # Install explicitly inside container if you truly need it:
+  # "cupy-cuda12x>=12.0.0 ; platform_system == 'Linux'",
 ]
 
+# GPU frameworks are *disabled by default* and only used on Linux
+linux-gpu = [
+  # IMPORTANT:
+  # 1) We do NOT hard-pin nightly day slices here. We allow pre-releases at sync time.
+  # 2) We add Linux markers to avoid Windows resolution failures.
+  "torch      ; platform_system == 'Linux'",
+  "torchvision; platform_system == 'Linux'",
+  "torchaudio ; platform_system == 'Linux'",
+
+  # JAX CUDA-only wheels are Linux-only
+  "jax[cuda12-local]>=0.4.26 ; platform_system == 'Linux'",
+]
+
+memory-management = [
+  "psutil>=5.9.0",
+  "memory-profiler>=0.61.0",
+]
+
+# --- Removed the global [tool.uv.index]/[tool.uv.sources] block ---
+# We will pass PyTorch nightly indexes during container build or `uv sync` in Linux only.
+
 [tool.pytensor]
-# Default configuration for PyTensor
-device = "cuda"          # Use CUDA by default if available
-floatX = "float32"       # Use float32 by default for better CUDA performance
-allow_gc = true          # Allow garbage collection
-optimizer = "fast_run"   # Fast run optimization by default
+device = "cuda"
+floatX = "float32"
+allow_gc = true
+optimizer = "fast_run"
+
+[tool.uv]
+compile-bytecode = true
+link-mode = "copy"
+python-downloads = "never"
+# Tip: we’ll supply `--prerelease=allow` and `--index-strategy unsafe-best-match`
+# only in the Linux container where we actually want nightlies.
+
