--- a/.devcontainer/env.template
+++ b/.devcontainer/env.template
@@ -1,32 +1,44 @@
-# Environment Configuration Template for Docker Dev Container
-# Copy this file to /workspace/.env and modify as needed
+ENV_NAME=docker_dev_template
+CUDA_TAG=12.8.0
+DOCKER_BUILDKIT=1
 
-# TensorFlow Installation Control
-# Set to 1 to install TensorFlow nightly (for RTX 5080 compatibility)
-# Set to 0 to skip TensorFlow installation (default)
-INSTALL_TF=0
+# Host ports
+HOST_JUPYTER_PORT=8895
+HOST_TENSORBOARD_PORT=6005
+HOST_EXPLAINER_PORT=8055
+HOST_STREAMLIT_PORT=8505
+HOST_MLFLOW_PORT=5005
 
-# Verification Strictness
-# Set to 1 to make verification failures block container startup
-# Set to 0 to allow container startup even with verification warnings (default)
-STRICT_VERIFY=0
+# Python & JAX
+PYTHON_VER=3.10
 
-# Debug Mode
-# Set to 1 to enable detailed logging and tracing
-# Set to 0 for normal operation (default)
-DEBUG=0
+# Leave blank to autodetect; set to 'gpu' or 'cpu' only if you must force it.
+JAX_PLATFORM_NAME=
 
-# Jupyter Configuration
+XLA_PYTHON_CLIENT_PREALLOCATE=true
+XLA_PYTHON_CLIENT_ALLOCATOR=platform
+XLA_PYTHON_CLIENT_MEM_FRACTION=0.95
+XLA_FLAGS=--xla_force_host_platform_device_count=1
+JAX_DISABLE_JIT=false
+JAX_ENABLE_X64=false
+TF_FORCE_GPU_ALLOW_GROWTH=false
+JAX_PREALLOCATION_SIZE_LIMIT_BYTES=8589934592
+
+# Runtime GPU targeting & Jupyter convenience
 JUPYTER_TOKEN=jupyter
 
-# Port Mappings (optional - will auto-assign if not specified)
-# HOST_JUPYTER_PORT=8890
-# HOST_TENSORBOARD_PORT=6008
-# HOST_EXPLAINER_PORT=8050
-# HOST_STREAMLIT_PORT=8501
-# HOST_MLFLOW_PORT=5000
+# Keep uv from targeting /workspace/.venv (a bind mount)
+UV_PROJECT_ENVIRONMENT=/app/.venv
 
-# Environment Name (used for Docker Compose project naming)
-ENV_NAME=docker_dev_template
 
+# NOTE: Torch CUDA wheel is auto-selected from CUDA_TAG at startup:
+#   12.1  -> cu121
+#   12.4  -> cu124
+#   12.6+ -> cu126 (works for 12.6 / 12.8 / 12.9)
+
+
+# ── Kaggle authentication (choose ONE approach) ─────────────────────────
+# Option A: env vars (fastest for CI/containers)
+KAGGLE_USERNAME=geoffhadfield 
+KAGGLE_KEY=your_api_token
 
