--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,44 +7,103 @@ license = "MIT"
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 
+# Unified deps = requirements.txt parity + safe bumps for JAX/PyMC
 dependencies = [
-  "pandas>=1.2.0",
-  "numpy>=1.20.0",
-  "matplotlib>=3.4.0",
-  "mlflow>=2.10.2",
-  "mlflow-skinny>=2.10.2",
-  "scikit-learn>=1.4.2",
-  "pymc>=5.0.0",
-  "arviz>=0.14.0",
-  "statsmodels>=0.13.0",
-  "jupyterlab>=3.0.0",
-  "seaborn>=0.11.0",
-  "tabulate>=0.9.0",
-  "shap>=0.40.0",
+  # ── Core numerics / data ─────────────────
+  "numpy>=1.26.0",               # JAX 0.6.x expects >=1.26
+  "pandas>=2.1.0",
+  "scipy>=1.12.0",
+  "pyarrow>=12.0.0",
+  "duckdb~=1.3.2",
+
+  # ── ML / stats ───────────────────────────
+  "scikit-learn>=1.4.2",         # ≥1.3.0 in reqs; newer OK
   "xgboost>=1.5.0",
   "lightgbm>=3.3.0",
   "catboost>=1.2.8,<1.3.0",
-  "scipy>=1.7.0",
+  "optuna>=3.0.0",
+  "optuna-integration[mlflow]>=0.2.0",
+
+  # PyMC stack (lift to handle NumPy 2.x cleanly)
+  "pymc>=5.21.0",                # modern PyMC supports NumPy 2.x
+  "pytensor>=2.28.2",
+  "arviz>=0.14.0",
+  "statsmodels>=0.13.0",
+  "numpyro>=0.18.0,<1.0.0",
+  "nutpie>=0.7.1",
+  "pytensor>=2.28.2",
+  "aesara>=2.9.4",
+
+  # ── Explainability ───────────────────────
+  "shap>=0.40.0",
   "shapash[report]>=2.3.0",
   "shapiq>=0.1.0",
   "explainerdashboard==0.5.1",
-  "ipywidgets>=8.0.0",
-  "nutpie>=0.7.1",
-  "numpyro>=0.18.0,<1.0.0",
-  "pytensor>=2.18.3",
-  "aesara>=2.9.4",
-  "tqdm>=4.66.5",
-  "pyarrow>=12.0.0",
-  "optuna>=3.0.0",
-  "optuna-integration[mlflow]>=0.2.0",
-  "omegaconf>=2.3.0,<2.4.0",
-  "hydra-core>=1.3.2,<1.4.0",
+
+  # ── API / web ────────────────────────────
   "fastapi>=0.104.0",
   "uvicorn[standard]>=0.24.0",
-  "pydantic>=2.0.0",
-  "pydantic-settings",
-  "kagglehub[pandas-datasets]>=0.3.12,<0.4.0",
-  "duckdb~=1.3.2",
+  "httpx>=0.24.0",
+  "python-multipart>=0.0.6",
+  "python-dotenv>=1.0.0",
+
+  # ── Auth / security ──────────────────────
+  "python-jose[cryptography]>=3.3.0",
+  "passlib[bcrypt]>=1.7.4",
+  "bcrypt==4.0.1",
+
+  # ── Caching / resiliency / rate limiting ─
+  "fastapi-limiter>=0.1.5",
+  "aioredis>=2.0.0",             # shim to redis asyncio (deprecated but fine)
+  "requests",
+  "requests-cache",
+  "diskcache",
+  "ratelimit>=2.2.1",
+  "tenacity>=8.2.3",
+  "cloudscraper==1.2.71",
+
+  # ── Visualization / notebooks ────────────
+  "matplotlib>=3.4.0",
+  "seaborn>=0.11.0",
+  "tabulate>=0.9.0",
+  "jupyterlab>=3.0.0",
+  "ipykernel>=6.25.0",
+  "ipywidgets>=8.0.0",
+
+  # ── Utilities / IO ───────────────────────
+  "tqdm>=4.67.0",
+  "psutil>=5.0.0,<8.0.0",
+  "protobuf>=4.24.4",
+  "unidecode",
+  "cpi>=2.0.0",
+  "lxml>=4.9.0",
+  "html5lib>=1.1",
+  "beautifulsoup4>=4.12.0",
+  "opencv-python-headless",
+  "pillow",
+  "boto3",
+  "aiosqlite>=0.19.0",
+  "openpyxl>=3.1.5",
+  "lz4==4.4.4",
+
+  # ── Sports / domain ──────────────────────
+  "nba_api==1.4.1",
+  "rapidfuzz>=3.0.0",
+
+  # ── Dashboards ───────────────────────────
+  "dash",
+  "dash-bootstrap-components",
+  "plotly",
+
+  # ── Config / KaggleHub ───────────────────
+  "omegaconf>=2.3.0,<2.4.0",
+  "hydra-core>=1.3.2,<1.4.0",
+  "kagglehub[datasets,pandas]>=0.3.12,<0.4.0",
+
+  # ── MLflow ───────────────────────────────
+  "mlflow>=2.10.2",
+  "mlflow-skinny>=2.10.2",
+  "apache-airflow==3.0.6",
 ]
 
 [project.optional-dependencies]
@@ -57,16 +116,18 @@ dev = [
   "invoke>=2.2",
 ]
 
-# GPU frameworks for Linux only (TensorFlow completely removed)
+# GPU frameworks for Linux only (TensorFlow removed)
+# NOTE: JAX GPU extra naming changed; use [cuda12] and keep versions aligned.
 linux-gpu = [
   "torch      ; platform_system == 'Linux'",
   "torchvision; platform_system == 'Linux'",
   "torchaudio ; platform_system == 'Linux'",
-  "jax[cuda12-local]>=0.4.26 ; platform_system == 'Linux'",
+  "jax[cuda12]==0.6.0 ; platform_system == 'Linux'",
+  "jaxlib==0.6.0      ; platform_system == 'Linux'",
 ]
 
 memory-management = [
-  "psutil>=5.9.0",
+  "psutil>=5.0.0,<8.0.0",
   "memory-profiler>=0.61.0",
 ]
 
@@ -80,4 +141,3 @@ optimizer = "fast_run"
 compile-bytecode = true
 link-mode = "copy"
 python-downloads = "never"
-
